--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+/* Reset some default styles and apply a box-sizing border-box */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Apply styles to the navigation bar */
+.navbar {
+  background-color: rgb(37, 36, 36);
+  padding: 15px;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2); /* Adding a subtle glow effect */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Style the navigation links */
+.links {
+  list-style: none;
+  display: inline-block;
+  margin-right: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.links a {
+  text-decoration: none;
   color: white;
+  transition: color 0.3s ease; /* Add a smooth transition effect for color change */
 }
 
-.App-link {
-  color: #61dafb;
+.links a:hover {
+  color: #8c8c8c; /*   Change the color on hover to a more subdued color */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Style for the logo */
+.logo {
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
 }
+
+.logo:hover {
+  color: #8c8c8c; /* Change the color on hover to a more subdued color */
+}
+
+.container-content{
+  margin-top: 30px;
+}
+
+
